# CryptFlows

./: .env.example  .gitignore  README.md  cryptflows.db  project_management.db  pyproject.toml
src/: main.py
src/cryptflows/: app.py
src/cryptflows/cli/: cli_utils.py
src/cryptflows/cli/repl/: repl_handlers.py  repl_utils.py
src/cryptflows/config/: app.py  base.py
src/cryptflows/configs/: config.py
src/cryptflows/database/: db.py
src/cryptflows/database/data/: vol_dir.uuid
src/cryptflows/database/data/m9333/: log
src/cryptflows/database/sql/surql/: sandbox-2024-07-06.surql  sandbox-2024-07-07-2.surql  schema.surql
src/cryptflows/db/: database.py
src/cryptflows/db/models/: project.py  project_role.py  task.py  task_type.py  team.py  team_invitation.py  team_member.py  user.py  user_role.py  workflow.py
src/cryptflows/domain/accounts/: dependencies.py  repositories.py  schemas.py  services.py
src/cryptflows/libr/: crypt.py
src/cryptflows/server/: routers.py
src/cryptflows/services/workflows/: workflow_orchestration.py
src/cryptflows/storage/database/: db.py
src/cryptflows/tui/: terminal_user_interface.py
src/cryptflows/workflows/: workflow_orchestration.py
src/cryptflows/workflows/marque/: storage.py
src/cryptflows/workflows/project_management/: project_models.py  project_utils.py
src/cryptflows/workflows/tasking/: tasking_utils.py
tests/7-10-2024/cryptflows/cli/: cli_utils.py
tests/7-10-2024/cryptflows/tui/: terminal_user_interface.py
tests/7-11(2)-2024/cryptflows/: app.py
tests/7-11-2024/: main.py
tests/7-11-2024/cryptflows/config/: base.py
(+69 files in other folders)
