[project]
name = "CryptFlows"
version = "0.0.1"
description = "Agent framework for pen testers"
authors = [
    {name = "cam", email = "cammclain@skiff.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
