[project]
name = "CryptFlows"
version = "0.0.1"
description = "Agent framework for pen testers"
authors = [
    {name = "cam", email = "cammclain@skiff.com"},
]
dependencies = [
    "litestar>=2.9.1",
    "pydantic>=2.8.2",
    "orjson>=3.10.6",
    "polars>=1.0.0",
    "langchain-core>=0.2.11",
    "advanced-alchemy>=0.17.1",
    "rich>=13.7.1",
    "boto3>=1.34.140",
    "pyseaweed>=2.0.0",
    "python-dotenv>=1.0.1",
    "pika>=1.3.2",
    "rich-click>=1.8.3",
    "sqlalchemy>=2.0.31",
    "duckdb-engine>=0.13.0",
    "logging>=0.4.9.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
